@@ -215,7 +215,7 @@ public class OrganizationSearcherImpl extends AbstractElasticSearch implements O
        
         builder.setSearchType(SearchType.QUERY_THEN_FETCH);
         
-        builder.setFrom(pageNum * pageSize).setSize(pageSize+1);
+        builder.setFrom(pageNum * pageSize).setSize(pageSize + 1);
         
         builder.setQuery(qb);
         
@@ -227,13 +227,17 @@ public class OrganizationSearcherImpl extends AbstractElasticSearch implements O
         
         List<Long> ids = getIds(rsp);
         GroupQueryResult result = new GroupQueryResult();
-        if(ids.size() > filter.getPageSize()) {
-            result.setPageAnchor(new Long(filter.getPageNumber() + 1));
+//        if(ids.size() > filter.getPageSize()) {
+//            result.setPageAnchor(new Long(filter.getPageNumber() + 1));
+//            ids.remove(ids.size() - 1);
+//         } else {
+//            result.setPageAnchor(null);
+//            }
+
+        if(ids.size() > pageSize){
+            result.setPageAnchor(Long.valueOf(pageNum + 1));
             ids.remove(ids.size() - 1);
-         } else {
-            result.setPageAnchor(null);    
-            }
-        
+        }
         result.setIds(ids);
         
         return result;
